[metadata]
name = esp32-hd44780
version = 1.0.0
author = Brad Keifer
author_email =
description = LCD API for HD44780-based liquid crystal displays
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bradkeifer/esp32-HD44780
project_urls =
    Bug Tracker = https://github.com/espressif/esp-docs/issues
classifiers =
    Programming Language :: C :: 99
    License :: OSI Approved :: MIT License
    Operating System :: ESP-IDF

[options]
package_dir =
    = docs
packages = find:
python_requires = >=3.7
install_requires =
    docutils<0.18
    cairosvg==2.5.1 # required by sphinxcontrib-svg2pdfconverter[CairoSVG]
    sphinx==4.5.0
    breathe==4.33.1
    sphinx-copybutton==0.5.0
    sphinx-notfound-page
    sphinxcontrib-blockdiag==3.0.0
    sphinxcontrib-seqdiag==3.0.0
    sphinxcontrib-actdiag==3.0.0
    sphinxcontrib-nwdiag==2.0.0
    sphinxcontrib-wavedrom>=3.0,<3.1
    sphinxcontrib-svg2pdfconverter[CairoSVG]==1.2.0
    nwdiag==2.0.0
    recommonmark
    sphinx_selective_exclude==1.0.3
    sphinx_idf_theme==1.1.0

[options.packages.find]
where = docs

[options.entry_points]
console_scripts =
    build-docs = esp_docs.build_docs:main
    deploy-docs = esp_docs.deploy_docs:main

[options.package_data]
* = fonts/*, latex_templates/*, idf_extensions/build_system/CMakeLists.txt, _static/*
